[project]
name = "rubber-duck-debugger-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.77.1",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "twilio>=9.9.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
